Revision history for Cassandra-Client

0.15    unreleased

      * Implement stricter timeout checks in case nodes go away
      * The client now defaults to protocol version 4. A backwards-compatible
        protocol_version argument was added.
      * Fix a bug that would stop prepare() from working
      * Address performance issue executing DDL on a single-node cluster

0.14    2017/11/27

      * Refactor a series of (for now) undocumented APIs
      * Encoder rewritten in XS, for performance
      * Support connecting to Cassandra via IPv6
      * Implement exponential backoff for connection failures
      * Avoid deep recursion when executing many queries concurrently

0.13    2017/07/05

      * Fix a critical bug in the INET type decoder.
        If you run 0.12, upgrade immediately!
      * Add back 32bit support

0.12    2017/06/27

      * Decoder rewritten in XS, for performance
      * Temporarily drops support for 32bit Perl. It will come back in a future version.

0.11    2017/06/12

      * Stricter and faster reference checks
      * Deduplicate parallel prepare() calls for the same query
      * Deal with some of Perl's special variables like $"
      * Avoid leaking file descriptors in some cases
      * Support for User-Defined Types (UDT)
      * Support for the 'Tuple' data type

0.10    2017/01/30

      * Add a retry policy implementation for generic request failures
      * Throttler: finally fix the feedback mechanism
      * Rework shutdown() to not need asynchronous code
      * Rework the pool management logic
      * Support for UTF-8 authentication data
      * Convenience method row_hashes() on a ResultSet
      * Basic TLS support
      * Make sure file handles always get closed when shutdown() is called

0.09    2016/11/15

      * Fix support for Perl 5.20 and later
      * Fix a class of memory leaks caused by recursion using closures
      * Add support for TIME/DATE/TINYINT/SMALLINT data types added in CQL 3.3